# fog

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-HEADER  vcpkg.json
doc/: issue.txt  todo.md
examples/: CMakeLists.txt
examples/e00/: .gitignore  CMakeLists.txt
examples/e00/materials/: e00.material  e00_vertex.glsl
examples/e00/src/: Example00.cpp  e00.cpp
examples/e01/: CMakeLists.txt
examples/e01/doc/: tmp.txt
examples/e01/src/: Example01.cpp  e01.cpp
examples/e02/: CMakeLists.txt
examples/e02/include/fg/: e02.h
examples/e02/materials/: e02.compositor  e02.material  e02_01_fragment.glsl  e02_01_vertex.glsl  e02_02_vertex.glsl  e02_fragment.glsl
examples/e02/src/: Example02.cpp  e02.cpp
examples/e03/: CMakeLists.txt
examples/e03/materials/: e03.compositor  e03.material  e03_00_fragment.glsl  e03_01_fragment.glsl  e03_01_vertex.glsl  e03_02_fragment.glsl  e03_02_vertex.glsl  e03_showTex_fragment.glsl  e03_showTex_vertex.glsl
examples/e03/src/: e03.cpp
framework/: CMakeLists.txt
framework/include/: fg.h
framework/include/delaunator/: Delaunator.h
framework/include/fg/: Actor.h  App.h  BuildingStateManager.h  CameraState.h  Cell.h  CellInstanceManager.h  CellInstanceStateManager.h  Common.h  Config.h  CoreMod.h  Height.h  ImGuiApp.h  InputState.h  InventoryStateManager.h  Manager.h  MaterialNames.h  MeshBuild.h  Mod.h  MovableStateManager.h  MovingStateManager.h  Parameters.h  PathFollow2.h  PathingStateManager.h  Pickable.h  Space.h  Stairs.h  State.h  TaskRunner.h  Tasks.h  Terrains.h  Video.h  actors.h  cells.h  core.h  defines.h  demo.h  ogre.h  ui.h  util.h
framework/src/: Config.cpp  FogOfWarTest.cpp  Space.cpp  contexts.cpp
framework/src/control/: HexGridApp.cpp
framework/src/core/: CameraUpdater.cpp  Service.cpp
framework/src/demo/: GameTerrain.cpp
framework/src/util/: HexGridPrinter.cpp  LicenseUtil.cpp  SimplexNoise.cpp
include/fg/: BuildingStateManager.h  CameraState.h  Cell.h  CellInstanceManager.h  Height.h  ImGuiApp.h  MeshBuild.h  Parameters.h  PathFollow2.h  PathingStateManager.h  State.h  TaskRunner.h
include/fg/core/: Building.h  DispatchInputListener.h  FogOfWar.h  H0085.h  ImGuiAppImpl.h  MaterialFactory.h  SimpleApp.h  SimpleCore.h  Sinbad.h  Tiles.h  TilesTerrains.h
include/fg/demo/: CellStateControl.h  GameTerrain.h  Policy.h  (+1 more)
src/: Config.cpp  contexts.cpp
src/demo/: GameTerrain.cpp
src/util/: LicenseUtil.cpp
(+219 files in other folders)
